# 714220063_AndikaMuhammadFatiha

Learn Rust/rust-2/Dangling/: dangling.rs
Learn Rust/rust-2/Mutable/: mutable.rs
Learn Rust/rust-2/Slice/: slice.rs
Learn Rust/rust-3/car_constructor/: car_constructor.rs
Learn Rust/rust-3/circle_method/: circle_method.rs
Learn Rust/rust-3/counter_increment/: counter_increment.rs
Learn Rust/rust-3/pair_max/: pair_max.rs
Learn Rust/rust-4/: Cargo.toml
Learn Rust/rust-5/: Cargo.toml  README.md
Learn Rust/rust-6/: README.md
Learn Rust/rust-7/: README.md
Learn Rust/rust-8/: .gitignore  Cargo.toml
Learn Rust/rust-8/src/: main.rs
Learn Rust/rust-8/src/configs/: config.rs
Learn Rust/rust-8/src/routes/: route.rs
rust-1/hour-2/: output_format.rs  typed_variable.rs
rust-1/hour-3/: arithmetic_operators.rs  array_slice.rs  array_values.rs  string_assignment.rs  variable_binding.rs
rust-1/hour-4/: for_loop.rs  match_statement.rs  tuple.rs  while_loop.rs
rust-1/hour-5/: enum_language.rs  ownership_move_error.rs  reference_correct.rs
rust-1/hour-6/: embedded_module.rs  private_function_error.rs
rust-1/hour-7/: generics_option.rs  match_range.rs  vector_basic.rs  vector_push.rs
rust-1/hour-8/: closure_simple.rs  drop_method.rs  trait_generic.rs  trait_implementation.rs
rust-2/Borrowing/: borrowing-mutable.rs
rust-2/Scope/: scope.rs
rust-3/book_struct/: book_struct.rs
rust-3/rectangle_area/: rectangle_area.rs
rust-3/student_display/: student_display.rs
rust-3/temperature_convert/: temperature_convert.rs
rust-5/src/: my_utils.rs
(+31 files in other folders)
